Models and DAO implemented/fixed