@@ -7,6 +7,7 @@ import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class BookingDAOMem extends BookingDAO {
     private static BookingDAOMem instance;
@@ -14,7 +15,6 @@ public class BookingDAOMem extends BookingDAO {
 
     protected BookingDAOMem() {
         this.bookings = new ArrayList<>();
-        initializeDemoData();
     }
 
     public static synchronized BookingDAOMem getInstance() {
@@ -24,37 +24,22 @@ public class BookingDAOMem extends BookingDAO {
         return instance;
     }
 
-    public void initializeDemoData() {
-        ConcreteBooking demoBooking = new ConcreteBooking();
-        demoBooking.setAthlete("athlete1");
-        demoBooking.setTrainingName("Box");
-        demoBooking.setCost(20.00);
-        demoBooking.setDate(LocalDate.now());
-        demoBooking.setStartTime("10:00");
-        demoBooking.setDescription("Prenotazione Demo");
-
-        bookings.add(demoBooking);
-
-        System.out.println("[MEM] Booking demo caricata per l'utente 'athlete1'");
-    }
-
     @Override
     public void saveBooking(BookingInterface booking) {
-        bookings.add(booking);
-        System.out.println("[MEM] Prenotazione di prova salvata per '" + booking.getAthlete() + "' - Costo: " + booking.getCost());
+        this.bookings.add(booking);
     }
 
     @Override
     public List<BookingInterface> getBookingByUser(Athlete user) {
         return bookings.stream()
-                .filter(b -> b.getAthlete().equals(user.getUsername()))
-                .toList();
+                .filter(b -> b.getAthlete().getUsername().equals(user.getUsername()))
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<BookingInterface> getBookingByTraining(Training training) {
         return bookings.stream()
-                .filter(b -> b.getTraining().equals(training.getName()))
-                .toList();
+                .filter(b -> b.getTraining().getPersonalTrainer().getUsername().equals(training.getPersonalTrainer().getUsername()))
+                .collect(Collectors.toList());
     }
 }
